
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Replace specific references to MySQL with more general language
- [#4185] Change modx logo in mgr to new logo
- [#4217] Add rank field to modUserGroupMember table
- [#4271] Highlight currently editing Resource on tree
- Fix issue with image/file TV and uploading in MODx.Browser when using a custom basePath TV
- [#4270] Fix issue where images could not be removed when using a custom basePath TV
- Add User Group related events
- [#4260] Change title tag in mgr UI to reflect current page
- [#4256] Add caption field to Quick Create/Update TV
- [#4261] Change keyboard save shortcut to CTRL+S
- [#4262] Ensure that FC rules htmlencode their tab/field labels
- [#4243] Ensure that files that are read-only do not show save button; fix file tree opening
- [#4244] Add backwards compatibility for Element properties of list type with older indexes
- [#4236] Fix bug in Template combo that hid category name
- Improve compression of images in mgr to reduce load times and core transport zip size
- [#4232] Fix Output Options being ignored in TVs in 2.1.0-rc1
- Add options to allow ACL queries to be disabled for Contexts, Categories, and Resource Groups
- [#3941] Fix issue where Resource TV values were not copied when duplicating a Context
- [#4202] Fix issues with file/image TVs urls/paths when using modx path placeholders
- Fix sorting/display bugs on UserGroup ACL grids, add grouping for better visibility
- [#4175] Add modRequest->getClientIp() for better IP handling
- [#4217] Add rank field to modUserGroup
- Update version to 2.1.0-rc-2
- [#4173] Fix issues with math-related output filters and floats
- [#4205] Ensure old modxcms.com provider is removed after change to modx.com provider
- [#4220] Fix modX::makeUrl() when friendly_urls not enabled