@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#3623] Fix TemplateVarTemplate foreign key definition in modTemplate
 - Replace specific references to MySQL with more general language
 - [#4185] Change modx logo in mgr to new logo
 - [#4217] Add rank field to modUserGroupMember table
